--- a/styke.css
+++ b/styke.css
@@ -155,7 +155,7 @@ ul{
     display: inline;
     width: 200px;
     height: 200px;
-    z-index: 3;
+    z-index: 1;
 }
 #_2-2{
     position: absolute;
@@ -178,22 +178,31 @@ ul{
     z-index: 1;
 }
 #_3{
-    position: absolute;
-    right: 0%;
+    position: fixed;
+    top: 63%;
+    left: -10%;
     opacity: 0.8;
-    rotate: -36deg;
-    bottom: -58vh;
+    rotate: 36deg;
     height: 15vh;
     z-index: 0;
 }
-/* 
-
-
+#_3-3{
+    position: fixed;
+    top: calc(63% - 12vh);
+    left: 0%;
+    left: -15%;
+    opacity: 0.8;
+    height: 25vh;
+    z-index: 0;
+}
 #_4{
-    position: absolute;
-    right: 10%;
-    height: 1vh;
-} */
+    position: fixed;
+    top: 0%;
+    right: 0%;
+    height: 55vh;
+    z-index: 0;
+}
+
 #pic{
     filter: drop-shadow( 7px 7px 15px rgba(216, 233, 194, 0.541));
     margin-bottom: 0%;
