--- a/styke.css
+++ b/styke.css
@@ -127,6 +127,7 @@ animation: fade-in 0.8s 1.0s forwards cubic-bezier(0.11, 0, 0.5, 0);
 .foot{
     background-color: #33635d88;
     padding: 30px;
+    padding-bottom: 8vh;
     border-radius: 20px;
 }
 p{
@@ -202,7 +203,12 @@ ul{
     height: 55vh;
     z-index: 0;
 }
-
+#gr{
+    position: fixed;
+    bottom: 0%;
+    height: 15vh;
+    left: -3%;
+}
 #pic{
     filter: drop-shadow( 7px 7px 15px rgba(216, 233, 194, 0.541));
     margin-bottom: 0%;
