--- a/styke.css
+++ b/styke.css
@@ -180,7 +180,7 @@ ul{
 }
 #_3{
     position: fixed;
-    top: 600px;
+    top: 0%;
     left: -10%;
     opacity: 0.8;
     rotate: 36deg;
@@ -189,7 +189,7 @@ ul{
 }
 #_3-3{
     position: fixed;
-    top: calc(600px - 12vh);
+    top: calc(0% - 12vh);
     left: -15%;
     opacity: 0.8;
     height: 25vh;
